Fixed the call button with align-items:center

--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ a{
 
         /* HEADER BUTTON */
 .header-button{
-    display: inline-block;
     background-color: var(--action);
+    display: inline-block;
     padding: 10px 20px;
     font-weight: 700;
     font-size: 16px;
@@ -191,13 +191,16 @@ padding:80px 30%;
 .call-con{
     background-color: #3882f6;
     justify-content: center;
+    align-items: center;
     display: flex;
     padding: 30px 0;
     border-radius: 8px;
+    
 }
 .call-text{
     width: 75%;
     color: #f9faf8;
+    margin: 8px;
 }
 
 .action-title{
@@ -211,6 +214,7 @@ padding:80px 30%;
     border-radius: 8px;
     color: #f9faf8;
     padding:10px 20px ;
+    margin: 8px;
 }
 .action-button:hover
 {
